# trtx-rs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  WINDOWS_GPU_SETUP.md  download-onnx-model.ps1
.github/: GPU_RUNNER_SETUP.md
.github/workflows/: ci.yml  gpu-tests.yml  publish.yml
docs/: DESIGN.md  FFI_GUIDE.md  HOW_TO_RELEASE.md  RUSTNN_INTEGRATION.md  WINDOWS_GPU_SETUP.md
scripts/: build-simple.ps1  test-gpu.ps1
trtexec-rs/: Cargo.toml  README.md
trtexec-rs/src/: cli.rs  main.rs  profiler.rs  progress_monitor.rs
trtx/: Cargo.toml
trtx-sys/: Cargo.toml  build.rs  generate_debug_enum.sh  logger_bridge.cpp  logger_bridge.hpp  mock.c  wrapper.hpp
trtx-sys/TensorRT-Headers/: cuda_runtime_api.h
trtx-sys/TensorRT-Headers/TRT-Enterprise-10.16/: NvInfer.h  NvInferImpl.h  NvInferRuntime.h  NvInferSafeMemAllocator.h  NvInferSafePlugin.h  NvInferSafeRecorder.h  NvInferSafeRuntime.h
trtx-sys/TensorRT-Headers/TRT-Enterprise-11.0/: NvInfer.h  NvInferConsistency.h  NvInferForwardDecl.h  NvInferSafeMemAllocator.h  NvInferSafePlugin.h  NvInferSafeRecorder.h  NvInferSafeRuntime.h
trtx-sys/TensorRT-Headers/TRT-RTX-1.3/: NvInfer.h  NvInferImpl.h  NvInferRuntime.h  NvInferVersion.h
trtx-sys/TensorRT-Headers/TRT-RTX-1.4/: NvInfer.h  NvInferImpl.h  NvInferRuntime.h  NvInferVersion.h  NvOnnxParser.h
trtx-sys/TensorRT-Headers/TRT-RTX-1.5/: NvInfer.h  NvInferImpl.h  NvInferRuntime.h  NvInferVersion.h  NvOnnxParser.h
trtx-sys/TensorRT-Headers/TensorRT-10.15.1.29/: NvInfer.h  NvInferImpl.h  NvInferRuntime.h
trtx-sys/src/: enums.rs  interfaces.rs  lib.rs
trtx-sys/tests/: autocxx_methods_test.rs  method_call_test.rs  simple_method_test.rs
trtx/examples/: basic_workflow.rs  rustnn_executor.rs  tiny_network.rs
trtx/src/: autocxx_helpers.rs  axes.rs  builder.rs  builder_config.rs  cuda.rs  cuda_engine.rs  engine_inspector.rs  enum_helpers.rs  error.rs  execution_context.rs  executor.rs  host_memory.rs  interfaces.rs  lib.rs  logger.rs  miette_repr.rs  network.rs  onnx_parser.rs  optimization_profile.rs  refitter.rs  runtime.rs  runtime_cache.rs  runtime_config.rs  tensor.rs
trtx/src/mock/: builder.rs  cuda.rs  error.rs  logger.rs  mod.rs  network.rs  onnx_parser.rs  runtime.rs
trtx/src/real/: builder.rs  builder_config.rs  cuda.rs  cuda_engine.rs  host_memory.rs  logger.rs  mod.rs  network.rs  onnx_parser.rs  runtime.rs
trtx/src/snapshots/: trtx__miette_repr__tests__with_problematic_layer_source_contains_layer.snap  trtx__miette_repr__tests__with_problematic_tensor_network_input.snap  trtx__miette_repr__tests__with_problematic_tensor_points_to_producer.snap
trtx/tests/: dynloading.rs  test_builder_config.rs
