[workspace]
members = ["trtx-sys", "trtx", "trtexec-rs"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Tarek Ziade", "Markus Tavenrath", "Stephan Seitz"]
repository = "https://github.com/rustnn/trtx-rs"

[workspace.dependencies]
trtx-sys = { path = "trtx-sys" }
trtexec-rs = { path = "trtx" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[patch.crates-io]
trtx = { path = "trtx" }
trtx-sys = { path = "trtx-sys" }
[patch."https://github.com/rustnn/rustnn/"]
trtx = { path = "trtx" }
trtx-sys = { path = "trtx-sys" }
