[package]
name = "trtexec-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustnn = { git = "https://github.com/theHamsta/rustnn/", features = [
	"trtx-runtime",
], default-features = false, branch = "trtx-v0.5.0" }

nvidia-nvtx = { version = "0.2", git = "https://github.com/NVIDIA/NVTX", branch = "release-v3" }
log = "0.4"
pretty_env_logger = "0.5"
trtx = { version = "0.5.0", path = "../trtx", default-features = true }
trtx-sys = { version = "0.5.0", path = "../trtx-sys", default-features = true }
indicatif = "0.18"
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
ctrlc = "3.5"
md5 = "0.8.0"
cudarc = { version = "0.19", features = ["cuda-13020"] }
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde_json = "1.0"
