[package]
name = "trtx-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Raw FFI bindings to NVIDIA TensorRT-RTX (EXPERIMENTAL - NOT FOR PRODUCTION)"
readme = "../README.md"
links = "tensorrt-rtx"
keywords = ["tensorrt", "inference", "nvidia", "ffi"]
categories = ["external-ffi-bindings"]

[build-dependencies]
autocxx-build = "0.27"
cc = "1.0"

[features]
default = ["v_1_3"]
# Mock mode for development without TensorRT-RTX installed
mock = []
onnxparser = []
link_tensorrt_rtx = []
link_tensorrt_onnxparser = ["onnxparser"]

# versions
v_1_3 = []

[dependencies]
autocxx = "0.27"
cxx = "1.0"
