[package]
name = "trtx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Safe Rust bindings to NVIDIA TensorRT-RTX (EXPERIMENTAL - NOT FOR PRODUCTION)"
readme = "../README.md"
keywords = ["tensorrt", "inference", "deep-learning", "nvidia", "gpu"]
categories = ["api-bindings", "science"]

[dependencies]
trtx-sys = { version = "0.3.0", path = "../trtx-sys", default-features = false }
thiserror = "2.0"
cxx = "1.0"
libc = "0.2"
libloading = { version = "0.9", optional = true }

# cudarc for safe CUDA operations (required when real mode is enabled)
# Using cuda-12050 as fallback; CUDA 13.x should be compatible
cudarc = { version = "0.11", features = ["driver", "cuda-12050"], optional = true }
log = "0.4.29"

[features]
# real TensorRT-RTX with cudarc by and dynamic loading by default
default = ["real", "dlopen_tensorrt_onnxparser", "dlopen_tensorrt_rtx", "onnxparser", "v_1_3"]
mock   = ["trtx-sys/mock"] # mock implementation (no CUDA required)
real   = ["dep:cudarc", "trtx-sys/v_1_3"]    # real TensorRT-RTX
link_tensorrt_rtx = ["trtx-sys/link_tensorrt_rtx"]
dlopen_tensorrt_rtx = ["libloading"]
link_tensorrt_onnxparser = ["trtx-sys/link_tensorrt_onnxparser", "onnxparser"]
dlopen_tensorrt_onnxparser = ["libloading"]
onnxparser = ["trtx-sys/onnxparser"]

# versions
v_1_3 = ["trtx-sys/v_1_3"]

[dev-dependencies]
# For examples and tests
pretty_env_logger = "0.5"

[[example]]
name = "tiny_network"
required-features = []

[[example]]
name = "basic_workflow"
required-features = ["onnxparser"]

[[example]]
name = "rustnn_executor"
required-features = ["onnxparser"]
